added routes for users collection
