# routes/index.js
@@ -3,5 +3,6 @@ const router = express.Router();
 
 router.use("/", require("./swagger"));
 router.use("/products", require("./products"));
+router.use("/users", require("./users"));
 
 module.exports = router;
